2005-04-26  Andrew Haley  <aph@redhat.com>

PR libgcj/21020:
	* jni.cc (_Jv_JNI_GetAnyFieldID): Use class' loader to find
	field's type.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@98789 138bc75d-0d04-0410-961f-82ee72b054a4